--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building Catcoin
+Building FuMPcoin
 
-See doc/readme-qt.rst for instructions on building Catcoin-Qt,
+See doc/readme-qt.rst for instructions on building FuMPcoin-Qt,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of Catcoin.
+implementation of FuMPcoin.
 
-See doc/build-*.txt for instructions on building catcoind,
+See doc/build-*.txt for instructions on building fumpcoind,
 the intended-for-services, no-graphical-interface, reference
-implementation of Catcoin.
+implementation of FuMPCoin.
